# lordbornebot

./: .gitignore  Cargo.toml  LICENSE  README.md  example_config.json  outline.md
bot/: .gitignore  Cargo.toml  example_config.json
bot/migrations/: create_tables.sql
bot/src/: main.rs  modules.rs  util.rs
bot/src/data/: afk.rs  mod.rs  points.rs
bot/src/middleware/: filter.rs
bot/src/modules/: points.rs  shapes.rs
bot/src/twitch/: parser.rs
core/: Cargo.toml
core/src/: lib.rs
lordbornebot_core/: Cargo.toml
lordbornebot_core/src/: lib.rs
migrations/: create_tables.sql
modules/afk/: Cargo.toml
modules/afk/src/: lib.rs
modules/gamble/: Cargo.toml
modules/gamble/src/: lib.rs
modules/ping/: Cargo.toml
modules/ping/src/: lib.rs
modules/points/: Cargo.toml
modules/points/src/: data.rs  lib.rs
modules/shapes/: Cargo.toml
modules/shapes/src/: data.rs  lib.rs
src/: main.rs  util.rs
src/data/: afk.rs  mod.rs  rpg.rs  users.rs
src/database/: points.rs
src/middleware/: filter.rs  mod.rs
src/modules/: afk.rs  gamble.rs  mod.rs  points.rs  rpg.rs  shapes.rs
src/twitch/: client.rs  mod.rs  parser.rs
