[package]
name = "lordbornebot"
version = "0.1.0"
authors = ["Matija <kevicmatija@gmail.com>"]

[dependencies]
rusqlite = {version = "0.13.0", features = ["bundled", "chrono"]}
chrono = "0.4.4"
rand = "0.5.4"
regex = "1.0.2"
serde = "1.0.70"
serde_derive = "1.0.70"
serde_json = "1.0.24"
log = "0.4.3"
env_logger = "0.5.12"
bincode = "1.0.1"
libloading = "0.5.0"
lordbornebot_core = {version = "*", path = "lordbornebot_core"}