[package]
name = "afk"
version = "0.1.0"
authors = ["Matija <kevicmatija@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
rusqlite = {version = "0.13.0", features = ["bundled", "chrono"]}
chrono = "0.4.4"
log = "0.4.3"
env_logger = "0.5.12"
lordbornebot_core = {version = "*", path = "../../core"}