[package]
name = "gamble"
version = "0.1.0"
authors = ["Matija <kevicmatija@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
rusqlite = {version = "0.13.0", features = ["bundled", "chrono"]}
log = "0.4.3"
env_logger = "0.5.12"
rand = "0.5.4"
lordbornebot_core = {version = "*", path = "../../core"}